[package]
name = "list-images"
version = "0.1.0"
authors = [ "ayosec@gmail.com" ]
license = "Apache-2.0"
edition = "2021"
description = "A CLI program to show images in a terminal, using the iTerm2 image protocol."
readme = "README.md"

[dependencies]
anyhow = "1.0.59"
base64 = "0.13.0"
clap = { version = "3.2.16", features = ["derive"] }
crossbeam-channel = "0.5.6"
image = "0.24.3"
nix = { version = "0.24.2", default-features = false, features = ["term", "fs"] }
num_cpus = "1.13.1"
turbojpeg = { version = "0.5.0", features = ["image"] }

[profile.release]
debug = true
overflow-checks = true

[profile.dist]
codegen-units = 1
debug = false
inherits = "release"
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
strip = "debuginfo"
