[package]
name = "list-images"
version = "0.3.1"
authors = [ "ayosec@gmail.com" ]
license = "Apache-2.0"
edition = "2021"
description = "A CLI program to show images in a terminal, using the iTerm2 image protocol."
readme = "README.md"

[dependencies]
anyhow = "1.0.59"
base64 = "0.22.1"
bytesize = "1.2.0"
clap = { version = "4.5.23", features = ["derive"] }
crossbeam-channel = "0.5.6"
dirs = "4.0.0"
hex = "0.4.3"
image = "0.25.5"
libarchive3-sys = "0.1.2"
nix = { version = "0.29", default-features = false, features = ["term", "fs"] }
num_cpus = "1.13.1"
sha2 = { version = "0.10.6", features = ["asm"] }
turbojpeg = { version = "0.5.4", features = ["image"] }

[profile.release]
debug = true
overflow-checks = true

[profile.dist]
codegen-units = 1
debug = false
inherits = "release"
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
strip = "debuginfo"
